fixing word overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1089,6 +1089,7 @@ h6,
 }
 p {
   margin: 0 0 11px;
+  overflow-wrap: break-word;
 }
 .lead {
   margin-bottom: 22px;
@@ -1216,6 +1217,9 @@ ol ul,
 ul ol,
 ol ol {
   margin-bottom: 0;
+}
+li{
+  overflow-wrap: break-word;
 }
 .list-unstyled {
   padding-left: 0;
@@ -6939,10 +6943,11 @@ ul.icons-ul {
     margin: 0px;
   }
   .container {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
+
 /* ------------------ Project banner, tagline and tab ------------------------- */
 .banner {
   position: relative;
